renderer/styles/addWallet.module.css
.rootPage {
    height: calc(100vh - 10px);
}

.root {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.root input[type="password"], .root input[type="text"] {
    margin-left: 8px;
}

.root input[type="radio"] {
    margin: 1px 5px 1px 0;
}

.root label {
    align-items: center;
    display: inline-flex;
}

.bitcoinKeys {
    flex-grow: 1;
    resize: none;
    width: 100%;
}

.buttonChoose {
    margin-left: 16px;
}

.buttons {
    align-items: center;
    display: flex;
    height: 40px;
    justify-content: flex-end;
    padding-top: 20px;
}

.buttons button {
    margin-left: 20px;
}

.box {
    border: 1px solid #999;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    margin-left: 20px;
    padding: 20px;
}

.boxMain {
    flex-grow: 1;
    padding: 20px;
}

.content {
    box-sizing: border-box;
    display: flex;
    height: 100%;
    padding: 20px;
}

.imageWrapper {
    margin-top: 10px;
}

.imageWrapper img {
    width: 100px;
}

.importKeys .boxMain {
    display: flex;
    flex-direction: column;
}

.main {
    flex-grow: 1;
}

.seedPhrase {
    height: 3.5em;
    resize: none;
    width: 100%;
}

.network_form {
    margin-top: 12px;
}

.network_form select {
    margin-left: 10px;
}

.config_title {
    font-weight: bold;
    margin-bottom: 10px;
}

.config_container {
    display: flex;
}

.config_left {
    width: 200px;
}

.config_left select {
    width: 100%;
}

.config_left option {
    cursor: pointer;
}

.config_right {
    margin-left: 20px;
    flex: 1;
    display: grid;
    grid-template-columns: 125px 1fr;
    grid-row-gap: 15px;
}

.config_right > div {
    display: contents;
}

.config_right input[type=text] {
    margin-left: 0;
}

.config_right input[type=radio] {
    position: relative;
    top: 1px;
    cursor: pointer;
}

.config_right label:not(:first-child) input[type=radio] {
    margin-left: 10px;
}

.config_right input[type=submit] {
    cursor: pointer;
    margin-right: 5px;
}

.config_right .error {
    color: #f00;
    font-weight: bold;
    margin-top: 10px;
}

